subbribe buttom size fixed

--- a/css/style.css
+++ b/css/style.css
@@ -456,7 +456,7 @@ nav ul li {
     .collapse ul .subscribe .btn {
         padding-top: 10px;
         height: 45px;
-        width: 160px;
+        width: 125px;
         border-radius: 20px;
         margin-bottom: 20px;
     }
@@ -496,7 +496,7 @@ nav ul li {
     .btn-success2:active,
     .open>.dropdown-toggle.btn-success2,
     .navbar-default .navbar-nav>.subscribe>a:focus,
-    .navbar-default .navbar-nav>.subscribe>a:hover,
+    .navbar-default .navbar-nav>.subscribe>a:hover
         {
         color: #fff;
         background-color: #ffae00;
@@ -508,6 +508,22 @@ nav ul li {
         border-color: transparent;
     }
 }
+
+
+
+@media (min-width: 992px) {
+    
+.collapse ul .subscribe .btn {
+       
+        width: 80%;
+       
+    }
+
+}
+
+
+
+
 
 
 
