--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*******************************  fonts imported from Google fonts *********************************************/
 
-@import url('https://fonts.googleapis.com/css?family=Bangers|Montserrat:400,500|Cuprum:400,700');
+@import url('https://fonts.googleapis.com/css?family=Bangers|Cuprum:400,700');
 
 
 /************************************************************  GENERAL *******************************************************************/
